clusters/vollminlab-cluster/external-secrets/external-secrets/app/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-secrets
  namespace: external-secrets
  labels:
    app: external-secrets
    env: production
    category: security
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: 1password
      ports:
        - protocol: TCP
          port: 8080
    - ports:
        - protocol: TCP
          port: 443
    - ports:
        - protocol: TCP
          port: 6443
    - ports:
        - protocol: TCP
          port: 53
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
